# crypto-bot

./: .coverage.nao.local.16221.XyOLOfJx  .coverage.nao.local.19375.XfvoetQx  .coverage.nao.local.2662.XHVQAXIx  .coverage.nao.local.26942.XqCjEkZx  .coverage.nao.local.29193.XWOlqCux  .coverage.nao.local.31445.XfjCSxpx  .coverage.nao.local.47135.XIyCsnUx  .coverage.nao.local.48197.XOMhVKzx  .coverage.nao.local.55680.XcNmoxkx  .coverage.nao.local.67537.XEAnnOmx  .coverage.nao.local.72848.Xaoawudx  .coverage.nao.local.83098.XHdKVvyx  .coveragerc  .dockerignore  .env.cache  .env.example  .flake8  .gitignore  ANALYSIS_SUMMARY.md  BACKUP_README.md  CHATGPT_REVIEW_REQUEST.md  CLAUDE.md  CLAUDE_phase9_update.md  DEPLOY_READY.md  DEPLOY_STATUS.md  Dockerfile  Dockerfile.optimized  Dockerfile.simple  FEATURE_ANALYSIS.md  GPT -5-2.md  GPT -5.md  GPT-5_REQUEST.md  GPTアドバイス.md  Makefile  PRODUCTION_READY_101FEATURES.md  Phase8_feature_mapping_analysis.py  Phase_55_Todo.md  README.md  REFACTORING_STATUS.md  TODO_ROADMAP.md  (+45 more)
.claude/plans/: mellow-wandering-sprout.md
.github/: README.md
.github/ISSUE_TEMPLATE/: feature_request.yml  improvement.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: README.md  backtest.yml  ci.yml  ci.yml.bak  cleanup.yml  emergency-stop.yml  k8s-deploy.yml  ml-training-new.yml  model-training.yml  monitoring.yml  optuna-optimization.yml  simple-ci.yml  test.yml  walk_forward.yml  weekly-report.yml  weekly_backtest.yml  weekly_report.yml
.ipynb_checkpoints/: 01_fetcher-checkpoint.ipynb  02_entry-checkpoint.ipynb  03_backtest-checkpoint.ipynb  05_main-checkpoint.ipynb  backtest-checkpoint.py  entry-checkpoint.py  main-checkpoint.py  optimizer-checkpoint.py  strategy-checkpoint.py  untitled-checkpoint.txt
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
_legacy_v1/: .flake8  TODO_ROADMAP.md
_legacy_v1/.github/: README.md
_legacy_v1/backtest/: README.md
_legacy_v1/crypto_bot/: README.md
_legacy_v1/docker/: README.md
_legacy_v1/docs/: TECHNICAL_EVOLUTION_ANALYSIS.md
_legacy_v1/models/: README.md
_legacy_v1/requirements/: README.md  base.txt  dev.txt  validate.py
_legacy_v1/scripts/: bot_manager.py  operational_status_checker.py  status_config.json
backtest/configs/: indicator_combination_samples.yml
backtest/engine/: __init__.py  engine.py  evaluation.py  optimizer.py
backtest/scripts/: run_backtest.py
backup/phase3_external_files/: external_data_cache.py  fear_greed_fetcher.py  multi_source_fetcher.py  test_external_api_integration.py
config/: .env.example  README.md  aggressive_2x_target.yml  api_versions.json  baseline_2year.yml  bitbank_101features_csv_backtest.yml  bitbank_101features_production.yml  bitbank_lightweight_test.yml  bitbank_production.yml  bitbank_production_jpy_realistic.yml  default.yml  dxy_fear_greed.yml  dxy_fear_greed_2year.yml  dxy_fear_greed_quick.yml  dxy_simple.yml  ensemble_trading.yml  multi_strategy.yml  one_year_backtest.yml  one_year_fixed.yml  optimized_integration.yml  strategies.yaml
coverage-reports/: .coverage  .gitkeep  README.md
crypto_bot/: README.md  __init__.py  api.py  config.py  init_enhanced.py  main.py  monitor.py
data/: README.md  orphan_sl_orders.json
deployment/: README.md
docker/: Dockerfile  README.md  build_docker.sh  docker-entrypoint.sh  run_docker.sh  test_docker_local.sh
docs/: CI後チェック作業.md  DEPLOYMENT_AND_OPERATIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  README.md  TECHNICAL_ANALYSIS.md  ToDo.md  VALIDATION_WORKFLOW.md  bayesian_analysis_report.md  ci-optimization.md  cloud_run_optimization.md  config_optimization_report.md  deployment_log.md  github-branch-protection.md  github_secrets_setup.md  kubernetes-migration-guide.md  phase3_1_status.md  phase4_1_complete_summary.md  phase4_1_plan.md  production-exchange-guide.md  terminal1_tasks.md  運用マニュアル.md
infra/: README.md  github-deployer-key.json  main.tf  monitoring.tf  outputs.tf  services.tf  terraform.tfstate  variables.tf
jupyter/:  risk.ipynb  04_strategy.ipynb  optimizer.ipynb  test.ipynb
logs/: README.md
models/: README.md
readme/: トークン期限  指示1.txt  指示2.txt  指示3.txt
requirements/: base.txt  dev.txt  validate.py
scripts/: README.md  analyze_127_features_detailed.py  auto_push.sh  bigquery_log_queries.sql  bot_manager.py  build_complete_amd64.sh  build_docker.sh  build_phase2_amd64.sh  check_monitoring_status.py  checks.sh  cleanup_gcp_resources.sh  compare_97vs127_features.py  comprehensive_fix.sh  comprehensive_monitoring_system_h28.py  config_upgrade_manager.py  continuous_optimization_framework.py  convert_absolute_to_relative_paths.py  create_backtest_data.py  create_ci_cache.sh  create_ci_model.py  create_ensemble_model_125.py  create_full_127_model.py  create_minimal_cache.py  create_production_model.py  create_proper_ensemble_model.py  create_robust_profitable_model.py  deployment_issue_validator.py  diagnose_cloud_run_apis.py  diagnose_external_apis.py  diagnose_prediction_bias.py  diagnose_real_data_features.py  diagnose_time_features.py  ensemble_ab_testing_system.py  ensemble_backtest_system.py  entry_signal_verification_h28.py  feature_integrity_quality_test.py  fix_model_compatibility.py  git_commit.py  git_push.sh  gitcp.sh  (+65 more)
src/: README.md  __init__.py
tax/: README.md  __init__.py  gcs_persistence.py  pnl_calculator.py  trade_history_recorder.py
test_results/: feature_integrity_quality_test.json  feature_test_151_20250721_155505.json  integration_backtest_config.yml  ml_integration_system_test.json  multi_timeframe_test_20250721_155611.json  multi_timeframe_test_20250721_155720.json  multi_timeframe_test_20250721_155756.json  performance_comparison.json  performance_test_20250721_160211.json  performance_test_20250721_160354.json
tests/: README.md  conftest.py  test_execution_service.py  test_execution_service_simple.py  test_external_api_integration.py  test_feature_consistency.py
tools/: analyze_stats.py  calibrate_model.py  fetch_ohlcv.py  plot_performance.py  plot_pr_curve.py  plot_walk_forward.py  sweep_thresholds.py
(+1671 files in other folders)
